# ocelot

./: Cargo.toml  README.md  Vagrantfile  orb.yml
cli/ocelot/: Cargo.toml
cli/ocelot/subcommand/: Cargo.toml
cli/orb/: Cargo.toml
cli/orb/src/: main.rs
cli/orb/src/command/: Cargo.toml  mod.rs
cli/orb/src/command/developer/: mod.rs
cli/orb/src/service/: Cargo.toml  build_service.rs  credential_service.rs  integration_service.rs  organization_service.rs
cli/orb/src/subcommand/: Cargo.toml  build_cmd.rs  completion.rs  mod.rs  repo.rs
cli/orb/src/subcommand/developer/: docker.rs  git.rs  local_build.rs  mod.rs  validate.rs
cli/orb/src/subcommand/operator/: start.rs
git_meta/: git_info.rs
lib/config_parser/: Cargo.toml  parser.rs
lib/container_builder/: Cargo.toml  docker.rs  mod.rs
lib/git_meta/: Cargo.toml  git_info.rs
models/orbital_api/: Cargo.toml
services/: organization_service.rs
