[package]
name = "orb"
version = "0.1.0"
authors = ["T.J. Telan <tjtelan@level11.com>"]
edition = "2018"
default-run = "orb"

[dependencies]
structopt = "0.3.2"
clap = "2.33"
tower-hyper = "0.1"
tower-grpc = "0.1"
prost = "0.5"
prost-types = "0.5"
bytes = "0.4"
futures = "0.1"
orbital_api = { path = "../../models/orbital_api" }
orbital_subcommand = { path = "src/subcommand" }
service = { path = "src/service"}