[package]
name = "command"
version = "0.1.0"
authors = ["T.J. Telan <t.telan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.2"
git_meta = { path = "../../../../git_meta" }


[lib]
name = "command"
path = "mod.rs"