[package]
name = "service"
version = "0.1.0"
authors = ["T.J. Telan <t.telan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-grpc = "0.1"
futures = "0.1"
orbital_api = { path = "../../../../models/orbital_api" }


[lib]
name = "service"
path = "mod.rs"