[package]
name = "orbital_subcommand"
version = "0.1.0"
authors = ["T.J. Telan <t.telan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.2"
clap = "2.33"
git_meta = { path = "../../../../git_meta" }
shiplift = "0.5"
tokio = "0.1.22"

[lib]
name = "subcommand"
path = "mod.rs"