[package]
name = "orbital_subcommand"
version = "0.1.0"
authors = ["T.J. Telan <t.telan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.2"
clap = "2.33"
git_meta = { path = "../../../../git_meta" }
shiplift = "0.5"
tokio = "0.1.22"
orbital_api = { path = "../../../../models/orbital_api" } # TODO: This is the generated proto headers
service = { path = "../service" } # TODO: Might want to rename this crate to a more obvious name. This is the implementation of the orbital api
tower-hyper = "0.1"
futures = "0.1"
log = "0.4"
tower-grpc = "0.1"
hyper = "0.12"
http = "0.1"
tower-request-modifier = { git = "https://github.com/tower-rs/tower-http" }
tower-util = "0.1"

[lib]
name = "subcommand"
path = "mod.rs"